[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clargs"
dynamic = ["version"]
description = "Easily generate commandline apps from your functions, based on type hints"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Claude", email = "pypi@claude.nl" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/reinhrst/clargs#readme"
Issues = "https://github.com/reinhrst/clargs/issues"
Source = "https://github.com/reinhrst/clargs"

[tool.hatch.version]
path = "src/clargs/__about__.py"

[tool.hatch.envs.get-python-versions]
python = "3.12"
scripts.get-python-versions = """
python -c 'import tomllib;import json;import pathlib;print(json.dumps(tomllib.loads(pathlib.Path("pyproject.toml").read_text())["tool"]["hatch"]["envs"]["hatch-test"]["matrix"][0]["python"]), end="")'
"""

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
scripts.check = "mypy --install-types --non-interactive {args:src/clargs tests}"

[tool.hatch.envs.lint]
extra-dependencies = [
  "ruff>=0.4.5",
]
scripts.lint-check = "ruff check --diff"
scripts.format-check = "ruff format --diff"
scripts.lint-fix = "ruff check --fix"
scripts.format-fix = "ruff format"

[tool.hatch.envs.examples]
scripts.check = "./examples/__generate_example_output__.sh examples/ --check"
scripts.generate = "./examples/__generate_example_output__.sh examples/ --overwrite"

[tool.coverage.run]
source_pkgs = ["clargs", "tests"]
branch = true
parallel = true
omit = [
  "src/clargs/__about__.py",
]

[tool.coverage.paths]
clargs = ["src/clargs", "*/clargs/src/clargs"]
tests = ["tests", "*/clargs/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.hatch-test]
dependencies = [
  "pytest",
  "pytest-cov"
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.12", "3.11", "3.10"]
